--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,1 +1,24 @@
+<div class="header">
+    <ul>
+        <div class="mobile" id="myMobile">
+            <li><a href="{{site.baseurl}}/" {% if page.url == "/" %}style="text-decoration: underline;"{% endif %}>Home</a></li>
+            <li><a href="about-us" {% if page.url == "/about-us.html" %}style="text-decoration: underline;"{% endif %}>About Us</a></li>
+            <li><a href="{{site.baseurl}}/#services">Our Services</a></li>
+            <li><a href="blog.html">Blog</a></li>                
+            <div class="links">
+                <div class="socials">
+                    <li><a href="https://www.instagram.com/onyxonlinehq/" class="fa fa-instagram"></a></li>
+                    <li></li><a href="https://www.facebook.com/ONYXOnlineHQ/" class="fa fa-facebook"></a></li>
+                    <li></li><a href="https://twitter.com/onyxonlinehq" class="fa fa-twitter"></a></li>
+                    <li></li><a href="#contact" class="contact">Contact Us</a></li>
+                </div>
+            </div>
+            <span class="topnav-icon">
+                <a href="javascript:void(0);" class="fa fa-bars" onlcick="myFunction()"></a>
+            </span>  
+        </div>
 
+                       
+    </ul>
+
+</div>
