--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@
             </div>
 
             <div class="form-container">
-                <form action="/action_page.php">
+                <form class="gform" method="POST" data-email="bigfish916@gmail.com" action="https://script.google.com/macros/s/AKfycbzwWpcRId1nMIj33HUOcLwd8vZSOz2I5zZ_M8z1i_UMJxj94d-nbDXR1NaBsN2auaKB/exec">
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" name="firstname">
 
@@ -25,9 +25,19 @@
                     <label for="message">MESSAGE</label>
                     <textarea id="message" name="message" placeholder="Brief us on what you're looking for and your expectations. Or even tell us your best joke." style="height:74px"></textarea>
                     <input type="submit" value="Send">
+
+
+                    <div style="display:none" class="thankyou_message">
+                        <!-- You can customize the thankyou message by editing the code below -->
+                        <h2><em>Thanks</em> for contacting us! We will get back to you soon!
+                        </h2>
+                       </div>                    
                 </form>                
             </div>
 
         </section>
+
+        <script data-cfasync="false" type="text/javascript" src="/onyxonline/assets/js/form-submission-handler.js"></script>
+
 
         
