--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
 
         <link href="{{ site.baseurl }}/assets/css/main.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">              
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">                
     </head>
     <body>
