--- a/_includes/header-blog.html
+++ b/_includes/header-blog.html
@@ -2,5 +2,8 @@
     <div class=invert-header>
      {% include header.html%}
     </div>
+    <div class="blog-logo">
+        <img src="/onyxonline/assets/Images/OnyxOnline+logo+text+2.png">
+    </div>
     <div>space</div>            
 </section>
