--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@
             </div>
 
             <div class="form-container">
-                <form class="gform" method="POST" data-email="bigfish916@gmail.com" action="https://script.google.com/macros/s/AKfycbzwWpcRId1nMIj33HUOcLwd8vZSOz2I5zZ_M8z1i_UMJxj94d-nbDXR1NaBsN2auaKB/exec">
+                <form class="gform" method="POST" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbyr4qZSfzDClGiMr2G8Q7K6WOnNbMltMCo3CfjYm87RLxu49oMCs7kDQw2pZt8dbqT8/exec">
                     <label for="fname">First Name</label>
                     <input type="text" id="fname" name="firstname">
 
