--- a/_includes/header-blog.html
+++ b/_includes/header-blog.html
@@ -3,7 +3,7 @@
      {% include header.html%}
     </div>
     <div class="blog-logo">
-        <img src="/onyxonline/assets/Images/OnyxOnline+logo+text+2.png">
+        <a href="{{site.baseurl}}/"><img src="/onyxonline/assets/Images/OnyxOnline+logo+text+2.png"></a>
     </div>
     <div>space</div>            
 </section>
