--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
     <ul>
         <div class="mobile" id="myMobile">
             <li><a href="{{site.baseurl}}/" {% if page.url == "/" %}style="text-decoration: underline;"{% endif %}>Home</a></li>
-            <li><a href="about-us" {% if page.url == "/about-us.html" %}style="text-decoration: underline;"{% endif %}>About Us</a></li>
+            <li><a href="{{site.baseurl}}/about-us" {% if page.url == "/about-us/" %}style="text-decoration: underline;"{% endif %}>About Us</a></li>
             <li><a href="{{site.baseurl}}/#services">Our Services</a></li>
-            <li><a href="blog.html">Blog</a></li>                
+            <li><a href="{{site.baseurl}}/blog" {% if page.url == "/blog/" %}style="text-decoration: underline;"{% endif %}>Blog</a></li>                
             <div class="links">
                 <div class="socials">
                     <li><a href="https://www.instagram.com/onyxonlinehq/" class="fa fa-instagram"></a></li>
