--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,10 +10,10 @@
 
 <div class="PageNavigation">
     {% if page.previous.url %}
-      <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+      <h1><a class="prev" href="{{site.baseurl}}/{{page.previous.url}}">{{page.previous.title}}&raquo;</a></h1>
     {% endif %}
     {% if page.next.url %}
-      <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+      <h1><a class="next" href="{{site.baseurl}}/{{page.next.url}}">&laquo;{{page.next.title}}</a></h1>
     {% endif %}
   </div>
 
