--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+{% include header-mobile.html%}
 <div class="header">
     <ul>
         <div class="mobile" id="myMobile">
@@ -14,7 +15,7 @@
                 </div>
             </div>
             <span class="topnav-icon">
-                <a href="javascript:void(0);" class="fa fa-bars" onlcick="myFunction()"></a>
+                <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
             </span>  
         </div>
 
@@ -22,3 +23,4 @@
     </ul>
 
 </div>
+
