--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -13,7 +13,16 @@
 
         </section>
 
-
+        <script>
+            function openNav() {
+              document.getElementById("myNav").style.height = "100%";
+            }
+            
+            function closeNav() {
+              document.getElementById("myNav").style.height = "0%";
+            }
+        </script>
+        
         <script src="mobile.js">
 
         </script>
