more mobile fixes

--- a/_includes/header-mobile.html
+++ b/_includes/header-mobile.html
@@ -3,7 +3,7 @@
     <div class="overlay-content">
       <a href="{{site.baseurl}}/">Home</a>
       <a href="{{site.baseurl}}/about-us">About Us</a>
-      <a href="{{site.baseurl}}/#services">Our Services</a>
+      <a href="{{site.baseurl}}/#services" onclick="closeNav()">Our Services</a>
       <a href="{{site.baseurl}}/blog">Blog</a>
     </div>
   </div>
