--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
         <!-- Add icon library -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <link href="{{ site.baseurl }}/assets/css/main.css" type="text/css" rel="stylesheet">
+        <link href="/assets/css/main.css" type="text/css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">                
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
